# sqlite_code_gen

./: .gitignore  LICENSE  README.md  pyproject.toml
sqlite_code_gen/: __init__.py  __main__.py  sql_to_c.py
tests/: test_simple.py
tests/static/: test_simple.c  test_simple.sql  test_simple_format.c
